syntax = "proto3";
package org.DS.xinqipeiproject.SmartOfficeGRPC;

service SecuritycameraService{
  rpc initialItem(Empty) returns (cameraResponse) {}
  
  rpc changeCamera(stringRequest) returns (stream stringResponse) {}
  
  rpc changeDistance(valueRequest) returns (stream valueResponse) {}
  
  rpc onOff(booleanRequest) returns (booleanResponse) {}
  
  rpc changeItemName(stringRequest) returns (stringResponse) {}

}

message Empty {

}

message stringRequest {
	string text = 1;
}

message stringResponse {
	string text = 1;
}

message booleanRequest {
	bool msg = 2;
}

message booleanResponse {
	bool msg = 2;
}

message valueRequest {
  int32 length = 3;
}

message valueResponse {
  int32 length = 3;
}

message cameraResponse{
  string aname = 4;
  string status = 5;
  string cam = 6;
  int32 distance = 7;
}